Intergate discovery-service with config-service

--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -17,11 +17,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-        <!-- run the Discovery Service without the Config Server for now, -->
-        <!-- <dependency>
+        <!-- Used for integrating with config service using bootstrap.yml -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <!-- Commented starter config when you want to run Discovery Service without the Config Server -->
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency> -->
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
