--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>config-service</module>
         <module>discovery-service</module>
+        <module>courses-management-service</module>
         <!-- <module>gateway-service</module>
         <module>licensing-service</module>
         <module>organization-service</module> -->
